[package]
name = "meteor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aphelion-util = "0.1.2"
bitflags = "2.4.2"

[features]
default = [
    "std"
]
std = []

[[example]]
name = "cli"
required-features = ["std"]

[dev-dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"

[profile.release]
debug = true
codegen-units = 1